testsuite/tests/typecheck/should_fail/UnliftedNewtypesMismatchedKind.stderr

UnliftedNewtypesMismatchedKind.hs:12:10: error:
    • Expected a boxed type, but ‘Int#’ has representation ‘IntRep’
    • In the type ‘Int#’
      In the definition of data constructor ‘MkT’
      In the newtype declaration for ‘T’
